messaging_app/messaging_app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: messaging-app-svc
  labels:
    app: messaging-app
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: messaging-app
    version: "blue"
