messaging_app/messaging_app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: messaging-app-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: messaging-app-svc
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: messaging-app-svc
                port:
                  number: 8000
